--- a/po/pt.po
+++ b/po/pt.po
@@ -2,12 +2,11 @@
 # translation of samba Debian debconf template to Portuguese
 # Miguel Figueiredo <elmig@debianpt.org>, 2004.
 #
-
 msgid ""
 msgstr ""
 "Project-Id-Version: samba 3.0.9-1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-08-30 19:08-0500\n"
+"POT-Creation-Date: 2005-08-13 17:05-0700\n"
 "PO-Revision-Date: 2005-01-05 19:25+0000\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
@@ -15,11 +14,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid "Character Set for Unix filesystem"
 msgstr "Conjunto de caracteres para sistema de ficheiros UNIX"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid ""
@@ -28,22 +29,25 @@ msgid ""
 "specify the character set you wish to use for theis new option, which "
 "controls how Samba interprets filenames on the file system."
 msgstr ""
-"Actualmente tem um \"character set\" configurado no seu smb.conf. No "
-"Samba 3.0, esta opção é substituída por uma nova opção, \"unix charset\". "
-"Por favor especifique o conjunto de caracteres para utilizar com esta nova "
+"Actualmente tem um \"character set\" configurado no seu smb.conf. No Samba "
+"3.0, esta opção é substituída por uma nova opção, \"unix charset\". Por "
+"favor especifique o conjunto de caracteres para utilizar com esta nova "
 "opção, que controla como o Samba interpreta os nomes dos ficheiros no "
 "sistema de ficheiros."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid "If you leave this option blank, your smb.conf will not be changed."
 msgstr "Se deixar esta opção vazia, o seu smb.conf não será alterado."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:13
 msgid "Character Set for DOS clients"
 msgstr "Conjunto de caracteres para clientes DOS"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:13
 msgid ""
@@ -59,14 +63,17 @@ msgstr ""
 "especifique o conjunto de caracteres que quer utilizar para esta nova opção. "
 "Na maioria dos casos, o valor por omissão escolhido para si será suficiente. "
 "Note que esta opção não é necessária para suportar clientes em Windows, é "
-"apenas para clientes em DOS.  Se deixar esta opção vazia, o seu smb.conf "
-"não será alterado."
+"apenas para clientes em DOS.  Se deixar esta opção vazia, o seu smb.conf não "
+"será alterado."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid "Modify smb.conf to use WINS settings from DHCP?"
-msgstr "Modificar o smb.conf para utilizar definições de WINS a partir de DHCP?"
+msgstr ""
+"Modificar o smb.conf para utilizar definições de WINS a partir de DHCP?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid ""
@@ -83,6 +90,7 @@ msgstr ""
 "definições de WINS fornecidas por DHCP sejam automaticamente lidas a partir "
 "de /etc/samba/dhcp.conf."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid ""
@@ -92,11 +100,13 @@ msgstr ""
 "Tem de ter o pacote dhcp3-client instalado para tirar vantagem desta "
 "característica."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid "Configure smb.conf through debconf?"
 msgstr "Configurar o smb.conf através de debconf?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid ""
@@ -113,6 +123,7 @@ msgstr ""
 "confundir o debconf e necessitar que você edite à mão o smb.conf par o ter "
 "novamente operacional."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid ""
@@ -126,11 +137,13 @@ msgstr ""
 "de melhorias de configuração periódicas.  Assim sendo, a utilização do "
 "debconf é remomendada se possível."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:52
 msgid "Workgroup/Domain Name?"
 msgstr "Nome do Grupo de trabalho/Domínio ?"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:52
 msgid ""
@@ -139,14 +152,16 @@ msgid ""
 "the security=domain setting."
 msgstr ""
 "Isto controla qual o grupo de trabalho em que o seu servidor vai aparecer "
-"quando questionado pelos clientes. Note que este parâmetro também controla "
-"o nome de Domínio quando utilizado com a definição security=domain."
+"quando questionado pelos clientes. Note que este parâmetro também controla o "
+"nome de Domínio quando utilizado com a definição security=domain."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:60
 msgid "Use password encryption?"
 msgstr "Utilizar encriptação de passwords?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:60
 msgid ""
@@ -160,15 +175,17 @@ msgstr ""
 "Os clientes de Windows recentes comunicam com servidores de SMB utilizando "
 "passwords encriptadas. Se deseja utilizar passwords de texto puro você vai "
 "necessitar alterar um parâmetro no seu registo do Windows. É recomendado que "
-"utilize passwords encriptadas. Se o fizer, assegure-se que tem um ficheiro "
-"/etc/samba/smbpasswd válido e que defina lá passwords para cada um dos "
+"utilize passwords encriptadas. Se o fizer, assegure-se que tem um ficheiro /"
+"etc/samba/smbpasswd válido e que defina lá passwords para cada um dos "
 "utilizadores utilizando o comando smbpasswd."
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:4
 msgid "Create samba password database, /var/lib/samba/passdb.tdb?"
 msgstr "Criar base de dados de passwords samba, /var/lib/samba/passdb.tdb?"
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:4
 msgid ""
@@ -189,15 +206,17 @@ msgstr ""
 "as passwords têm de ser adicionadas manualmente (por si ou pelo utilizador) "
 "executando o comando smbpasswd, e você tem de mantê-las actualizadas no "
 "futuro.  Se não o criar, você terá de reconfigurar o samba (e provavelmente "
-"as máquinas clientes) para utilizar passwords de texto puro. Veja "
-"/usr/share/doc/samba-doc/htmldocs/ENCRIPTION.html do pacote samba-doc para "
-"mais detalhes."
+"as máquinas clientes) para utilizar passwords de texto puro. Veja /usr/share/"
+"doc/samba-doc/htmldocs/ENCRIPTION.html do pacote samba-doc para mais "
+"detalhes."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid "Samba's log files have moved."
 msgstr "Os ficheiros de log de Samba foram movidos."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid ""
@@ -206,10 +225,11 @@ msgid ""
 "names of the files are log.nmbd and log.smbd, for nmbd and smbd respectively."
 msgstr ""
 "Desde os primeiros pacotes para Debian de Samba 2.2 que os ficheiros de log "
-"para ambos os daemons de Samba (nmbd e smbd) são agora guardados em "
-"/var/log/samba/. Os nomes dos ficheiros são respectivamente log.nmbd e "
-"log.smbd, para o nmbd e smbd."
+"para ambos os daemons de Samba (nmbd e smbd) são agora guardados em /var/log/"
+"samba/. Os nomes dos ficheiros são respectivamente log.nmbd e log.smbd, para "
+"o nmbd e smbd."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid ""
@@ -219,11 +239,13 @@ msgstr ""
 "Os ficheiros de log antigos que estavam em /var/log/ vão ser movidos, para "
 "si, para a nova localização."
 
+#. Type: note
 #. Description
 #: ../samba.templates:28
 msgid "Running nmbd from inetd is no longer supported"
 msgstr "Executar o nmbd a partir de inetd já não é suportado"
 
+#. Type: note
 #. Description
 #: ../samba.templates:28
 msgid ""
@@ -234,20 +256,23 @@ msgid ""
 msgstr ""
 "O seu sistema foi previamente configurado para iniciar o nmbd e smbd a "
 "partir de inetd.  A partir da versão 2.999+3.0.alpha20-4, o nmbd já não "
-"inicia a partir do inetd.  Se você modificou o seu script de inicialização "
-"/etc/init.d/samba, pode ter de o ajustar agora à mão de modo a que o nmbd "
+"inicia a partir do inetd.  Se você modificou o seu script de inicialização /"
+"etc/init.d/samba, pode ter de o ajustar agora à mão de modo a que o nmbd "
 "inicie."
 
+#. Type: select
 #. Choices
 #: ../samba.templates:36
 msgid "daemons, inetd"
 msgstr "daemons, inetd"
 
+#. Type: select
 #. Description
 #: ../samba.templates:38
 msgid "How do you want to run Samba?"
 msgstr "Como deseja correr o Samba?"
 
+#. Type: select
 #. Description
 #: ../samba.templates:38
 msgid ""
@@ -257,11 +282,13 @@ msgstr ""
 "O daemon de Samba smbd pode correr como um daemon normal ou a partir de "
 "inetd. Executá-lo como um daemon é a aproximação recomendada."
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:45
 msgid "Move /etc/samba/smbpasswd to /var/lib/samba/passdb.tdb?"
 msgstr "Mover /etc/samba/smbpasswd para /var/lib/samba/passdb.tdb?"
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:45
 msgid ""
@@ -271,17 +298,19 @@ msgid ""
 "plan to use another pdb backend (e.g., LDAP) instead, you should answer 'no' "
 "here."
 msgstr ""
-""
 "O Samba 3.0 introduz um novo e mais completo interface com a base de dados "
-"SAM, que suplanta o ficheiro /etc/samba/smbpasswd. Deseja que o seu "
-"ficheiro existente smbpasswd seja migrado para /var/lib/samba/passdb.tdb "
-"para si? Se planeia utilizar em vez disso outro backend pdb (e.g., LDAP), "
-"deve responder aqui 'no'."
+"SAM, que suplanta o ficheiro /etc/samba/smbpasswd. Deseja que o seu ficheiro "
+"existente smbpasswd seja migrado para /var/lib/samba/passdb.tdb para si? Se "
+"planeia utilizar em vez disso outro backend pdb (e.g., LDAP), deve responder "
+"aqui 'no'."
+
+#. Type: note
 #. Description
 #: ../swat.templates:3
 msgid "Your smb.conf will be re-written!"
 msgstr "A sua configuração smb.conf será re-escrita!"
 
+#. Type: note
 #. Description
 #: ../swat.templates:3
 msgid ""
@@ -291,5 +320,5 @@ msgid ""
 msgstr ""
 "O SWAT irá reescrever o seu ficheiro smb.conf. Irá reordenar as entradas e "
 "apagar todos os comentários, e opções include= e copy=. Se tem um smb.conf "
-"cuidadosamente trabalhado faça uma cópia de segurança dele ou não utilize "
-"o SWAT!"
+"cuidadosamente trabalhado faça uma cópia de segurança dele ou não utilize o "
+"SWAT!"
