--- a/po/ru.po
+++ b/po/ru.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: samba_3.0.14a-2_ru\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-08-30 19:08-0500\n"
+"POT-Creation-Date: 2005-08-13 17:05-0700\n"
 "PO-Revision-Date: 2005-05-21 21:43+1000\n"
 "Last-Translator: Yuriy Talakan' <yt@amur.elektra.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -13,11 +13,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid "Character Set for Unix filesystem"
 msgstr "Кодировка для файловой системы Unix"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid ""
@@ -25,18 +27,25 @@ msgid ""
 "Samba 3.0, this option is replaced by a new option, \"unix charset\". Please "
 "specify the character set you wish to use for theis new option, which "
 "controls how Samba interprets filenames on the file system."
-msgstr "Сейчас у вас есть опция \"character set\" в smb.conf. В Samba 3.0, эта опция заменена на \"unix charset\". Укажите кодировку, которую вы желаете использовать для этой новой опции. Она отвечает за то, как Samba интерпретирует имена файлов в файловой системе."
+msgstr ""
+"Сейчас у вас есть опция \"character set\" в smb.conf. В Samba 3.0, эта опция "
+"заменена на \"unix charset\". Укажите кодировку, которую вы желаете "
+"использовать для этой новой опции. Она отвечает за то, как Samba "
+"интерпретирует имена файлов в файловой системе."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:3
 msgid "If you leave this option blank, your smb.conf will not be changed."
 msgstr "Если вы оставите опцию пустой, ваш smb.conf не будет изменен."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:13
 msgid "Character Set for DOS clients"
 msgstr "Кодировка для клиентов DOS"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:13
 msgid ""
@@ -46,13 +55,21 @@ msgid ""
 "default chosen for you will be sufficient.  Note that this option is not "
 "needed to support Windows clients, it is only for DOS clients.  If you leave "
 "this option blank, your smb.conf will not be changed."
-msgstr "Сейчас у вас есть опция \"client code page\" в smb.conf. В Samba 3.0, эта опция заменена на \"dos charset\". Укажите кодировку, которую вы желаете использовать для этой новой опции. В большинстве случаев значения по умолчанию будет достаточно. Запомните, что эта опция не нужна для поддержки клиентов Windows, она только для клиентов DOS. Если вы оставите опцию пустой, ваш smb.conf не будет изменен."
+msgstr ""
+"Сейчас у вас есть опция \"client code page\" в smb.conf. В Samba 3.0, эта "
+"опция заменена на \"dos charset\". Укажите кодировку, которую вы желаете "
+"использовать для этой новой опции. В большинстве случаев значения по "
+"умолчанию будет достаточно. Запомните, что эта опция не нужна для поддержки "
+"клиентов Windows, она только для клиентов DOS. Если вы оставите опцию "
+"пустой, ваш smb.conf не будет изменен."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid "Modify smb.conf to use WINS settings from DHCP?"
 msgstr "Изменить smb.conf для использования настроек WINS из DHCP?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid ""
@@ -61,20 +78,30 @@ msgid ""
 "(\"NetBIOS name servers\") present on the network.  This requires a change "
 "to your smb.conf file so that DHCP-provided WINS settings will automatically "
 "be read from /etc/samba/dhcp.conf."
-msgstr "Если ваш компьютер получает информацию о своем IP-адресе от сервера DHCP через сеть, то DHCP-сервер также может предоставлять информацию о серверах WINS(\"серверы имен NetBIOS\"), присутствующих в сети. Это требует внесения изменений в ваш файл smb.conf, чтобы предоставленные через DHCP настройки WINS автоматически читались из /etc/samba/dhcp.conf."
+msgstr ""
+"Если ваш компьютер получает информацию о своем IP-адресе от сервера DHCP "
+"через сеть, то DHCP-сервер также может предоставлять информацию о серверах "
+"WINS(\"серверы имен NetBIOS\"), присутствующих в сети. Это требует внесения "
+"изменений в ваш файл smb.conf, чтобы предоставленные через DHCP настройки "
+"WINS автоматически читались из /etc/samba/dhcp.conf."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:24
 msgid ""
 "You must have the dhcp3-client package installed to take advantage of this "
 "feature."
-msgstr "Чтобы воспользоваться этой возможностью, вы должны установить пакет dhcp3-client."
+msgstr ""
+"Чтобы воспользоваться этой возможностью, вы должны установить пакет dhcp3-"
+"client."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid "Configure smb.conf through debconf?"
 msgstr "Настроить smb.conf через debconf?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid ""
@@ -83,8 +110,15 @@ msgid ""
 "Samba programs (nmbd and smbd.) Your current smb.conf contains an 'include' "
 "line or an option that spans multiple lines, which could confuse debconf and "
 "require you to edit your smb.conf by hand to get it working again."
-msgstr "Оставшаяся часть настройки Samba состоит из вопросов, которые затрагивают параметры в /etc/samba/smb.conf. Этот файл используется для настройки программ Samba (nmbd и smbd.) Ваш текущий smb.conf содержит строку 'include' или опцию, которая состоит из нескольких строк. Это может смутить debconf и потребовать от вас ручного редактирования вашего smb.conf для восстановления работоспособности."
+msgstr ""
+"Оставшаяся часть настройки Samba состоит из вопросов, которые затрагивают "
+"параметры в /etc/samba/smb.conf. Этот файл используется для настройки "
+"программ Samba (nmbd и smbd.) Ваш текущий smb.conf содержит строку 'include' "
+"или опцию, которая состоит из нескольких строк. Это может смутить debconf и "
+"потребовать от вас ручного редактирования вашего smb.conf для восстановления "
+"работоспособности."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:37
 msgid ""
@@ -92,26 +126,37 @@ msgid ""
 "configuration changes yourself, and will not be able to take advantage of "
 "periodic configuration enhancements.  Therefore, use of debconf is "
 "recommended if possible."
-msgstr "Если вы не используете debconf для настройки smb.conf, то должны самостоятельно позаботиться обо всех изменениях настроек и не сможете воспользоваться преимуществами периодического улучшения настроек. Таким образом, рекомендуется по возможности использовать debconf."
+msgstr ""
+"Если вы не используете debconf для настройки smb.conf, то должны "
+"самостоятельно позаботиться обо всех изменениях настроек и не сможете "
+"воспользоваться преимуществами периодического улучшения настроек. Таким "
+"образом, рекомендуется по возможности использовать debconf."
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:52
 msgid "Workgroup/Domain Name?"
 msgstr "Имя рабочей группы/домена?"
 
+#. Type: string
 #. Description
 #: ../samba-common.templates:52
 msgid ""
 "This controls what workgroup your server will appear to be in when queried "
 "by clients. Note that this parameter also controls the Domain name used with "
 "the security=domain setting."
-msgstr "Задает рабочую группу, в которой появится ваш сервер, когда его увидят клиенты. Обратите внимение, что этот параметр также задает имя домена, которое используется при security=domain."
+msgstr ""
+"Задает рабочую группу, в которой появится ваш сервер, когда его увидят "
+"клиенты. Обратите внимение, что этот параметр также задает имя домена, "
+"которое используется при security=domain."
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:60
 msgid "Use password encryption?"
 msgstr "Использовать шифрацию паролей?"
 
+#. Type: boolean
 #. Description
 #: ../samba-common.templates:60
 msgid ""
@@ -121,13 +166,21 @@ msgid ""
 "passwords. If you do, make sure you have a valid /etc/samba/smbpasswd file "
 "and that you set passwords in there for each user using the smbpasswd "
 "command."
-msgstr "Современные клиенты Windows общаются с серверами SMB используя шифрованные пароли. Если вы пожелаете использовать открытые пароли, вам придется изменить параметр в реестре Windows. Рекомендуется использовать шифрованные пароли. В этом случае убедитесь, что у вас правильный файл /etc/samba/smbpasswd и что вы установили там пароли для каждого пользователя командой smbpasswd."
+msgstr ""
+"Современные клиенты Windows общаются с серверами SMB используя шифрованные "
+"пароли. Если вы пожелаете использовать открытые пароли, вам придется "
+"изменить параметр в реестре Windows. Рекомендуется использовать шифрованные "
+"пароли. В этом случае убедитесь, что у вас правильный файл /etc/samba/"
+"smbpasswd и что вы установили там пароли для каждого пользователя командой "
+"smbpasswd."
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:4
 msgid "Create samba password database, /var/lib/samba/passdb.tdb?"
 msgstr "Создать базу данных паролей samba, /var/lib/samba/passdb.tdb?"
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:4
 msgid ""
@@ -140,33 +193,52 @@ msgid ""
 "probably your client machines) to use plaintext passwords. See /usr/share/"
 "doc/samba-doc/htmldocs/ENCRYPTION.html from the samba-doc package for more "
 "details."
-msgstr "Для совместимости со значением по умолчанию в большинстве версий Windows, Samba должна быть настроена на использование шифрованных паролей.  Это требует хранения пользовательских паролей в файле, отдельном от /etc/passwd. Этот файл может быть создан автоматически, но пароли должны быть добавлены вручную (вами или пользователем) посредством запуска smbpasswd, и вы должны заботиться о поддержании его в актуальном состоянии в будущем. Если вы не создадите его, то должны перенастроить samba (и вероятно ваши клиентские машины) на использование открытых паролей. Более подробно смотрите в /usr/share/doc/samba-doc/htmldocs/ENCRYPTION.html из пакета samba-doc."
+msgstr ""
+"Для совместимости со значением по умолчанию в большинстве версий Windows, "
+"Samba должна быть настроена на использование шифрованных паролей.  Это "
+"требует хранения пользовательских паролей в файле, отдельном от /etc/passwd. "
+"Этот файл может быть создан автоматически, но пароли должны быть добавлены "
+"вручную (вами или пользователем) посредством запуска smbpasswd, и вы должны "
+"заботиться о поддержании его в актуальном состоянии в будущем. Если вы не "
+"создадите его, то должны перенастроить samba (и вероятно ваши клиентские "
+"машины) на использование открытых паролей. Более подробно смотрите в /usr/"
+"share/doc/samba-doc/htmldocs/ENCRYPTION.html из пакета samba-doc."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid "Samba's log files have moved."
 msgstr "log-файлы Samba переместились."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid ""
 "Starting with the first packages of Samba 2.2 for Debian the log files for "
 "both Samba daemons (nmbd and smbd) are now stored in /var/log/samba/. The "
 "names of the files are log.nmbd and log.smbd, for nmbd and smbd respectively."
-msgstr "Начиная с первых пакетов Samba 2.2 для Debian, log-файлы для демонов Samba (nmbd и smbd) хранятся теперь в /var/log/samba/. Файлы называются log.nmbd и log.smbd для nmbd и smbd соответственно."
+msgstr ""
+"Начиная с первых пакетов Samba 2.2 для Debian, log-файлы для демонов Samba "
+"(nmbd и smbd) хранятся теперь в /var/log/samba/. Файлы называются log.nmbd и "
+"log.smbd для nmbd и smbd соответственно."
 
+#. Type: note
 #. Description
 #: ../samba.templates:17
 msgid ""
 "The old log files that were in /var/log/ will be moved to the new location "
 "for you."
-msgstr "Старые log-файлы, которые были в /var/log/, будут перемещены в новое для вас место."
+msgstr ""
+"Старые log-файлы, которые были в /var/log/, будут перемещены в новое для вас "
+"место."
 
+#. Type: note
 #. Description
 #: ../samba.templates:28
 msgid "Running nmbd from inetd is no longer supported"
 msgstr "Запуск nmbd из inetd больше не поддерживается"
 
+#. Type: note
 #. Description
 #: ../samba.templates:28
 msgid ""
@@ -174,30 +246,41 @@ msgid ""
 "of version 2.999+3.0.alpha20-4, nmbd will no longer be started from inetd.  "
 "If you have modified your /etc/init.d/samba startup script, you may need to "
 "adjust it by hand now so that nmbd will start."
-msgstr "Ваша система была ранее настроена на запуск nmbd и smbd из inetd.  nmbd с версии 2.999+3.0.alpha20-4 больше не запускается из inetd. Если вы изменили ваш стартовый скрипт /etc/init.d/samba, вам необходимо откорректировать его вручную, чтобы nmbd запускался."
+msgstr ""
+"Ваша система была ранее настроена на запуск nmbd и smbd из inetd.  nmbd с "
+"версии 2.999+3.0.alpha20-4 больше не запускается из inetd. Если вы изменили "
+"ваш стартовый скрипт /etc/init.d/samba, вам необходимо откорректировать его "
+"вручную, чтобы nmbd запускался."
 
+#. Type: select
 #. Choices
 #: ../samba.templates:36
 msgid "daemons, inetd"
 msgstr "daemons, inetd"
 
+#. Type: select
 #. Description
 #: ../samba.templates:38
 msgid "How do you want to run Samba?"
 msgstr "Как вы желаете запускать Samba?"
 
+#. Type: select
 #. Description
 #: ../samba.templates:38
 msgid ""
 "The Samba daemon smbd can run as a normal daemon or from inetd. Running as a "
 "daemon is the recommended approach."
-msgstr "Samba-демон smbd может запускаться как обычный демон или из inetd. Рекомендуем выбрать запуск в качестве демона."
+msgstr ""
+"Samba-демон smbd может запускаться как обычный демон или из inetd. "
+"Рекомендуем выбрать запуск в качестве демона."
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:45
 msgid "Move /etc/samba/smbpasswd to /var/lib/samba/passdb.tdb?"
 msgstr "Переместить /etc/samba/smbpasswd в /var/lib/samba/passdb.tdb?"
 
+#. Type: boolean
 #. Description
 #: ../samba.templates:45
 msgid ""
@@ -206,18 +289,27 @@ msgid ""
 "smbpasswd file to be migrated to /var/lib/samba/passdb.tdb for you?  If you "
 "plan to use another pdb backend (e.g., LDAP) instead, you should answer 'no' "
 "here."
-msgstr "Samba 3.0 приносит новый, более полный интерфейс базы данных SAM, который заменяет собой файл /etc/samba/smbpasswd.  Желаете, чтобы ваш существующий файл smbpasswd мигрировал в /var/lib/samba/passdb.tdb?  Если вы планируете вместо него использовать другой интерфейс pdb (например, LDAP), вы должны ответить здесь 'нет'."
+msgstr ""
+"Samba 3.0 приносит новый, более полный интерфейс базы данных SAM, который "
+"заменяет собой файл /etc/samba/smbpasswd.  Желаете, чтобы ваш существующий "
+"файл smbpasswd мигрировал в /var/lib/samba/passdb.tdb?  Если вы планируете "
+"вместо него использовать другой интерфейс pdb (например, LDAP), вы должны "
+"ответить здесь 'нет'."
 
+#. Type: note
 #. Description
 #: ../swat.templates:3
 msgid "Your smb.conf will be re-written!"
 msgstr "Ваш smb.conf будет перезаписан!"
 
+#. Type: note
 #. Description
 #: ../swat.templates:3
 msgid ""
 "SWAT will rewrite your smb.conf file. It will rearrange the entries and "
 "delete all comments, include= and copy= options. If you have a carefully "
 "crafted smb.conf then back it up or don't use SWAT!"
-msgstr "SWAT перепишет ваш файл smb.conf. Он перегруппирует все записи и удалит все комментарии, опции include= и copy=. Если у вас тщательно созданный smb.conf, то сохраните его в безопасном месте или не используйте SWAT!"
-
+msgstr ""
+"SWAT перепишет ваш файл smb.conf. Он перегруппирует все записи и удалит все "
+"комментарии, опции include= и copy=. Если у вас тщательно созданный smb."
+"conf, то сохраните его в безопасном месте или не используйте SWAT!"
