--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ samba (3.0.14a-7) UNRELEASED; urgency=low
   * Christian Perrier:
     - Debconf translations:
       - Added Vietnamese. Closes: #317876
+      - Updated German. Closes: #322907
   * Steve Langasek:
     - Use ${misc:Depends} in debian/control instead of depending on
       debconf directly, allowing use of cdebconf as an alternative.
