--- a/changelog
+++ b/changelog
@@ -7,8 +7,7 @@ samba (3.0.14a-7) UNRELEASED; urgency=low
   * Steve Langasek:
     - Use ${misc:Depends} in debian/control instead of depending on
       debconf directly, allowing use of cdebconf as an alternative.
-    - Debconf translations:
-      - Added German.  Closes: #322907
+      Closes: #332088.
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
